Fixed navbar alignment for responsiveness, aligned nav items start on mobile along with hamburger button, removed nav button borders

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -220,9 +220,21 @@ footer .col-6 h4, footer .col-6 p {
 
 /* MEDIA QUERIES */
 
-@media (max-width: 390px) {
+@media (max-width: 412px) {
 
     /* NAVBAR */
+
+    .nav-item .btn {
+        border: none;
+        padding-left: 0;
+    }
+
+    .nav-item {
+        width: 100%;
+        text-align-last: start;
+    }
+
+    /* HEADER */
 
     .header {
         margin-top: 50px;
